# QUB_Events_To_iCal

./: .gitignore  eventsProcess.cabal
src/: Main.hs
